2004-02-24  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: net_io needs to be in libextras to enable network
	support (failed if network debug was disabled)

2004-02-23  Uwe Kindler  <uwe_kindler@web.de>

	* src/cksum.c:
	* src/dump.c:
	* src/fconfig.c:
	* src/flash.c:
	* src/load.c:
	* src/main.c:
	* src/mcmp.c:
	* src/mcopy.c:
	* src/mfill.c:
	* src/net/net_io.c:
	* src/net/ping.c: Minor cleanups to remove warnings.

2004-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot.sgml: Document lowering security level for TFTP to
	work on more recent Red Hat Linux.

2004-02-19  Jani Monoses <jani@iv.ro>

	* src/xyzModem.c: Start with sending a 'C', do not wait until the
	first packet from the sender.This allows download to start quicker.
	
2004-02-16  Andrew Dyer  <adyer@righthandtech.com>

	* src/main.c: add 'go' options to help string

2004-02-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl: Bring CYGNUM_REDBOOT_LOAD_ZLIB_BUFFER under
	CYGBLD_BUILD_REDBOOT_WITH_ZLIB. Add CYGPRI_REDBOOT_ZLIB_FLASH to
	control whether decompression can be used with flash images.
	* src/flash.c: Use CYGPRI_REDBOOT_ZLIB_FLASH instead of
	CYGPKG_COMPRESS_ZLIB.
	* src/load.c: Use CYGBLD_BUILD_REDBOOT_WITH_ZLIB in place of
	CYGPKG_COMPRESS_ZLIB.
	* src/main.c: only set fis_zlib_common_buffer if
	CYGPRI_REDBOOT_ZLIB_FLASH.

	* src/main.c (set_comm_baud_rate): Get current rate with GETBAUD
	not SETBAUD!

2004-02-04  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Do not build with "common" interrupt stack
	support.  This can cause problems when running programs (via
	the "go" command) as interrupts will corrupt RedBoot's stack.

2004-01-18  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c: Fix build problem if GDB stubs are not included.
	Minor warning cleanup (cast on NO_MEMORY).

2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* src/net/tcp.c (tcp_send): Add [restore] delay into TCP write